package io.nfteam.nftlab.services.smartcontract;

public interface INFTTransaction { }
